# pyconfig

./: .gitignore  .pre-commit-config.yaml  noxfile.py  pylintrc  pyproject.toml  readme.md  requirements.txt  write.py
.github/workflows/: main.yaml
example/: app.py  config.py
pyconfig/: __init__.py  config.py
pydantic_loader/: __init__.py  config.py  encode.py  toml_config.py  yaml_config.py
tests/: conf.py  config.toml  conftest.py  test_config.py  test_encode.py
