[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pydantic_loader"
author = "Sander Teunissen"
author-email = "no_mail@nomail.com"
home-page = "https://github.com/sander76/pyconfig"
description-file="readme.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["pydantic >= 0.32","toml"]
requires-python = ">=3.6"
