[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pydantic_loader"
author = "Sander Teunissen"
author-email = "no_mail@nomail.com"
home-page = "https://github.com/sander76/pyconfig"
description-file="readme.md"
classifiers = ["License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"]
requires = ["pydantic >= 0.32","toml>=0.10.1"]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = ["pytest","pytest-asyncio","pytest-aiohttp"]
dev = ["pytest-cov","pylint","coverage[toml]>=5.0.3"]